--- a/app.json
+++ b/app.json
@@ -4,12 +4,6 @@
 		"slug": "earlApp",
 		"version": "1.0.0",
 		"orientation": "portrait",
-		"icon": "./app/assets/icon.png",
-		"splash": {
-			"image": "./assets/splash.png",
-			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
-		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
 		},
@@ -19,12 +13,13 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#FFFFFF"
 			}
 		},
 		"web": {
 			"favicon": "./app/assets/favicon.png"
-		}
+		},
+		"description": "",
+		"githubUrl": "https://github.com/Emmahchinonso/ear1"
 	}
 }
